数据结构笔记提交

--- a/每日一题.md
+++ b/每日一题.md
@@ -94,3 +94,27 @@ D、只能被同一个包中的类访问
 3、能被该类的子类所访问，子类可以和父类不在一个包中。
 ```
 
+# 2019.09.27 
+
+```
+假设 A 类有如下定义，设 a 是 A 类的一个实例，下列语句调用哪个是错误的？（ ）
+class  A{
+static  int  i;
+String  s;
+static  void  method1() {   }
+void  method2()  {   }
+}
+A、System.out.println(a.i)；
+B、a.method1();
+C、A.method1();
+D、A.method2()
+```
+
+```
+正确答案：D
+答案解析：static修饰的变量为静态成员变量；
+静态成员变量，静态方法可以直接通过类名或对象名去调用；
+因此A，B,C对；
+非静态方法，必须通过对象名去调用；因此D不对;
+```
+
