--- a/java笔记/线程/线程基础.md
+++ b/java笔记/线程/线程基础.md
@@ -145,3 +145,141 @@ Thread-0卖票：tickets8
 ```
 
 ### 3.2.2 继承Thread类
+
+将Runnable对象转变为工作任务的传统方式是把它提交给一个Thread构造器。
+
+```java
+package com.zjl.javase.thread;
+
+public class ThreadTest {
+	public static void main(String[] args) {
+		class MyThread extends Thread {
+			private int tickets = 10;
+			@Override
+			public void run() {
+				for (int i = 0; i < 20; i++) {
+					if(this.tickets > 0){
+						System.out.println(this.getName()+"买票：ticket"+this.tickets--);
+					}
+				}
+			}
+			
+		}
+		
+		// 启动3个线程t1,t2,t3；每个线程各卖10张票！
+        // 和上面的结果对比，并揣摩 “Runnable还可以用于“资源共享”。即，多个线程都是基于某个Runnable对象建立的，它们会共享Runnable对象上的资源”这句话。
+		MyThread t1 = new MyThread();
+		MyThread t2 = new MyThread();
+		MyThread t3 = new MyThread();
+		t1.start();
+		t2.start();
+		t3.start();
+	}
+}
+
+
+运行结果：
+Thread-0买票：ticket10
+Thread-1买票：ticket10
+Thread-0买票：ticket9
+Thread-0买票：ticket8
+Thread-0买票：ticket7
+Thread-0买票：ticket6
+Thread-2买票：ticket10
+Thread-2买票：ticket9
+Thread-2买票：ticket8
+Thread-2买票：ticket7
+Thread-2买票：ticket6
+Thread-2买票：ticket5
+Thread-2买票：ticket4
+Thread-2买票：ticket3
+Thread-2买票：ticket2
+Thread-2买票：ticket1
+Thread-1买票：ticket9
+Thread-1买票：ticket8
+Thread-1买票：ticket7
+Thread-1买票：ticket6
+Thread-1买票：ticket5
+Thread-1买票：ticket4
+Thread-1买票：ticket3
+Thread-1买票：ticket2
+Thread-1买票：ticket1
+Thread-0买票：ticket5
+Thread-0买票：ticket4
+Thread-0买票：ticket3
+Thread-0买票：ticket2
+Thread-0买票：ticket1
+```
+
+# 四、synchronized 关键字
+
+## 4.1 概述
+
+​	**synchronized关键字是为了解决共享资源竞争的问题**，共享资源一般是**以对象形式存在的内存片段**，但也可以是文件、输入/输出端口，或者是打印机。要控制对共享资源的访问，得先把它包装进一个对象。然后把所有要访问的这个资源的方法标记为synchronized。如果某个任务处于一个对标记为synchronized的方法的调用中，那么在这个线程从该方法返回之前，其他所有要调用类中任何标记为synchronized方法的线程都会被阻塞。所有对象都自动含有**单一的锁（也称为监视器）**。当在对象上调用其任意synchronized方法的时候，对象都被加锁，这时该对象上的其他synchronized方法只有等到前一个方法调用完毕并释放了锁之后才能被调用。 
+  **在Java中，每个对象有且仅有一个同步锁**。这也意味着，**同步锁是依赖于对象而存在的**。当我们调用某个对象的synchronized方法时，就获得了该对象的同步锁，不同线程对同步锁的访问是互斥的。因为锁语句产生了一种互相排斥的效果，所以这种机制常常称为**互斥量（mutex）**。
+
+
+## 4.2 synchronized 基本原则和实例
+
+### 4.2.1 基本原则
+
+synchronized的基本原则总结如下：
+
+**第一条**：当一个线程访问**某个对象**的**synchronized方法**或**synchronized代码块**时，**其他线程**对**该对象**的**该synchronized方法**或**synchronized代码块**的访问将被**阻塞**。
+
+**第二条**：当一个线程访问**某个对象**的**synchronized方法**或**synchronized代码块**时，**其他线程**仍然可以访问**该对象**的**非同步代码块**。
+
+**第三条**：当一个线程访问**某个对象**的**synchronized方法**或**synchronized代码块**时，**其他线程**对**该对象**的**其他的synchronized方法**或**synchronized代码块**的访问将被**阻塞**。
+
+### 4.2.2 实例
+
+**第一条**：当一个线程访问**某个对象**的**synchronized方法**或**synchronized代码块**时，**其他线程**对**该对象**的**该synchronized方法**或**synchronized代码块**的访问将被**阻塞**。
+
+```
+package com.zjl.javase.thread;
+
+public class RunnableTest {
+	public static void main(String[] args) {
+		class MyRunnable implements Runnable{
+			private int tickets = 5;
+			public void run() {
+				synchronized(this){
+					for (int i = 0; i < 5; i++) {
+							try {
+								Thread.sleep(100);
+								System.out.println(Thread.currentThread().getName()+" loop " +i);
+							} catch (InterruptedException e) {
+								e.printStackTrace();
+							}
+					}
+				}
+				
+			}
+			
+		}
+		
+		Runnable runnable = new MyRunnable();
+		Thread t1 = new Thread(runnable,"t1");
+		Thread t2 = new Thread(runnable,"t2");
+		t1.start();
+		t2.start();
+	}
+}
+
+运行结果：
+t1 loop 0
+t1 loop 1
+t1 loop 2
+t1 loop 3
+t1 loop 4
+t2 loop 0
+t2 loop 1
+t2 loop 2
+t2 loop 3
+t2 loop 4
+```
+
+总结：
+
+run()方法中存在synchronized(this)代码块，而且t1和t2都市基于MyRunnable这个Runnable对象创建的线程。这意味着，我们能可以将synchronized(this)中的this看作是MyRunnable这个Runnable对象；因此，线程t1和t2共享"MyRunnable对象的同步锁"。所以当一个线程运行时，另外一个线程必须等待正在运行的线程释放MyRunnable的同步锁之后才能运行。
+
