java线程笔记提交

--- a/java笔记/线程/线程基础.md
+++ b/java笔记/线程/线程基础.md
@@ -281,5 +281,458 @@ t2 loop 4
 
 总结：
 
-run()方法中存在synchronized(this)代码块，而且t1和t2都市基于MyRunnable这个Runnable对象创建的线程。这意味着，我们能可以将synchronized(this)中的this看作是MyRunnable这个Runnable对象；因此，线程t1和t2共享"MyRunnable对象的同步锁"。所以当一个线程运行时，另外一个线程必须等待正在运行的线程释放MyRunnable的同步锁之后才能运行。
+**run()**方法中存在**synchronized(this)**代码块，而且t1和t2都市基于**MyRunnable**这个**Runnable对象**创建的线程。这意味着，我们能可以将synchronized(this)中的this看作是**MyRunnable这个Runnable对象**；因此，线程t1和t2共享"MyRunnable对象的同步锁"。所以当一个线程运行时，另外一个线程必须等待**正在运行的线程**释放**MyRunnable的同步锁**之后才能运行。
+
+```java
+package com.zjl.javase.thread;
+
+public class ThreadTest {
+	public static void main(String[] args) {
+		class MyThread extends Thread {
+			
+			public MyThread(String name) {
+				super(name);
+			}
+
+			@Override
+			public void run() {
+				synchronized(this) {
+					for (int i = 0; i < 10; i++) {
+						try {
+							Thread.sleep(100);
+							System.out.println(Thread.currentThread().getName() +" loop "+i);
+						} catch (InterruptedException e) {
+							e.printStackTrace();
+						}
+					}
+				}
+			}
+			
+		}
+		
+		MyThread t1 = new MyThread("t1");
+		MyThread t2 = new MyThread("t2");
+		t1.start();
+		t2.start();
+	}
+}
+
+运行结果：
+t2 loop 0
+t1 loop 0
+t2 loop 1
+t1 loop 1
+t1 loop 2
+t2 loop 2
+t1 loop 3
+t2 loop 3
+t1 loop 4
+t2 loop 4
+t1 loop 5
+t2 loop 5
+t1 loop 6
+t2 loop 6
+t1 loop 7
+t2 loop 7
+t1 loop 8
+t2 loop 8
+t1 loop 9
+t2 loop 9
+```
+
+对比：
+
+**实例1**是实现了**Runnable接口**，**实例2**继承了**Thread类**。
+
+在**run()**方法中都有**synchronized(this)**，实例1的结果是先执行线程t1再执行线程t2，实例2的结果是线程t1和t2交替执行。
+
+分析：
+
+**synchronized(this)**是指当前对象，即synchronized(this)所在类对应的对象。它的作用是获取当前对象的同步锁。
+
+对于实例2中的synchronized(this)中的this代表的是Mythread对象，t1和t2是两个不同的Mythread对象。因此t1和t2在执行synchronized(this)时获得的是不同对象的同步锁。
+
+对于实例1来说，synchronized(this)中的this代表的是MyRunnable对象，t1和t2是共同一个MyRunnable对象。
+
+因此，一个县城获取了对象的同步锁，会造成另外一个线程的等待。
+
+**第二条**：当一个线程访问**某个对象**的**synchronized方法**或**synchronized代码块**时，**其他线程**仍然可以访问**该对象**的**非同步代码块**。
+
+```java
+package com.zjl.javase.thread;
+
+public class SyncAndNoSync {
+	public static void main(String[] args) {
+		class Count{
+			// 含有synchronized同步块的方法
+			public void sync() {
+				synchronized(this) {
+					for (int i = 0; i < 5; i++) {
+						try {
+							Thread.sleep(100);
+							System.out.println(Thread.currentThread().getName() + " sync loop " +i);
+						} catch (InterruptedException e) {
+							e.printStackTrace();
+						}
+					}
+					
+				}
+				
+			}
+			// 非同步的方法
+			public void nosync() {
+				for (int i = 0; i < 5; i++) {
+					try {
+						Thread.sleep(100);
+						System.out.println(Thread.currentThread().getName() + " nosync loop " +i);
+					} catch (InterruptedException e) {
+						e.printStackTrace();
+					}
+				}
+			}
+		}
+		
+		 final Count count = new Count();
+	     // 新建t1, t1会调用“count对象”的synMethod()方法
+		 Thread t1 = new Thread(new Runnable() {
+			
+			public void run() {
+				
+				count.sync();
+			}
+		},"t1");
+		 // 新建t2, t2会调用“count对象”的nonSynMethod()方法
+		 Thread t2 = new Thread(new Runnable() {
+				
+				public void run() {
+					count.nosync();
+					
+				}
+			},"t2");
+		 
+		 t1.start();
+		 t2.start();
+
+	}
+}
+
+运行结果：
+t1 sync loop 0
+t2 nosync loop 0
+t1 sync loop 1
+t2 nosync loop 1
+t1 sync loop 2
+t2 nosync loop 2
+t1 sync loop 3
+t2 nosync loop 3
+t1 sync loop 4
+t2 nosync loop 4
+```
+
+结果说明：
+
+线程t1和t2交替执行。t1会调用count对象的sync()方法，该方法中含有同步块；而t2则会调用count对象的nosync()方法，该方法不是同步方法。
+
+t1运行时，虽然调用**synchronized(this)**获取**count对象的同步锁**；但是并没有造成t2阻塞，因为t2没有用到**count对象的同步锁**。
+
+**第三条**：当一个线程访问**某个对象**的**synchronized方法**或**synchronized代码块**时，**其他线程**对**该对象**的**其他的synchronized方法**或**synchronized代码块**的访问将被**阻塞**。
+
+```java
+package com.zjl.javase.thread;
+
+public class SyncAndSync {
+	public static void main(String[] args) {
+		class Count{
+			// 含有synchronized同步块的方法
+			public void sync() {
+				synchronized(this) {
+					for (int i = 0; i < 5; i++) {
+						try {
+							Thread.sleep(100);
+							System.out.println(Thread.currentThread().getName() + " sync loop " +i);
+						} catch (InterruptedException e) {
+							e.printStackTrace();
+						}
+					}
+					
+				}
+				
+			}
+            // 也包含synchronized同步块的方法
+			public void sync2() {
+				synchronized(this) {
+					
+					for (int i = 0; i < 5; i++) {
+						try {
+							Thread.sleep(100);
+							System.out.println(Thread.currentThread().getName() + " sync2 loop " +i);
+						} catch (InterruptedException e) {
+							e.printStackTrace();
+						}
+					}
+					
+				}
+			}
+		}
+		
+		 final Count count = new Count();
+	     // 新建t1, t1会调用“count对象”的synMethod()方法
+		 Thread t1 = new Thread(new Runnable() {
+			
+			public void run() {
+				
+				count.sync();
+			}
+		},"t1");
+		 // 新建t2, t2会调用“count对象”的Syn2Method()方法
+		 Thread t2 = new Thread(new Runnable() {
+				
+				public void run() {
+					count.sync2();
+					
+				}
+			},"t2");
+		 
+		 t1.start();
+		 t2.start();
+
+	}
+}
+
+运行结果：
+t1 sync loop 0
+t1 sync loop 1
+t1 sync loop 2
+t1 sync loop 3
+t1 sync loop 4
+t2 sync2 loop 0
+t2 sync2 loop 1
+t2 sync2 loop 2
+t2 sync2 loop 3
+t2 sync2 loop 4
+```
+
+结果说明：
+
+t1和t2运行时都调用synchronized(this)，这个this时Count对象（count），而t1和t2共同count。
+
+因此，在t1运行时，t2会被阻塞，等待t1运行释放"count对象的同步锁"，t2才能运行。
+
+## 4.3 synchronized方法和synchronized代码块
+
+### 4.3.1 概述
+
+
+
+​	**synchronized方法**是用synchronized修饰方法，这是一种**粗粒度锁**；这个同步方法（非static）无需显式指定同步监视器，同步方法的同步监视器是**this**，也就是调用该方法的对象。
+
+​	**synchronized代码块**是synchronized修饰代码块，这是一种**细粒度锁**；线程开始执行同步代码块前，必须先获得对同步监视器的锁定，任何时候只能有一个线程可以获得对同步监视器的锁定，当同步代码块执行完成后，该线程会释放对同步监视器的锁定。
+
+​	虽然java允许使用任何对象作为同步监视器，但是同步监视器的目的就是为了阻止两个线程对同一个共享资源进行并发访问，因此通常推荐使用可能被并发访问的共享资源充当同步监视器。
+
+```
+package com.zjl.javase.thread;
+
+public class synchronizedTest {
+	public static void main(String[] args) {
+		class Demo {
+			public synchronized void syncMethod() {
+				for (int i = 0; i < 999999999; i++) {
+					
+				}
+			}
+			
+			public void syncBlock() {
+				synchronized(this) {
+					for (int i = 0; i < 999999999; i++) {
+						
+					}
+				}
+			}
+		}
+		
+		Demo demo = new Demo();
+		long start,diff;
+		start = System.currentTimeMillis();
+		demo.syncMethod();   // 调用“synchronized方法块”
+		diff = System.currentTimeMillis() -start; // 获取“时间差值”
+		System.out.println(" syncMethod() : "+diff);
+		
+		start = System.currentTimeMillis();
+		demo.syncBlock();  // 调用“synchronized方法块”
+		diff = System.currentTimeMillis() -start; // 获取“时间差值”
+		System.out.println(" syncBlock() : "+diff);
+		
+	}
+}
+
+运行结果：
+ syncMethod() : 3
+ syncBlock() : 2
+```
+
+结果说明：
+
+**synchronized代码块**可以**更精确**的控制冲突限制访问区域，有时候表现**更高效**。
+
+## 4.4 实例锁和全局锁
+
+### 4.4.1 概念
+
+​	实例锁：锁在某个实例对象上，如果该类是单例，那么该锁也具有全局锁的概念，实例锁对应的就是synchronized关键字。
+
+​	全局锁：该锁针对的是类，无论实例多少个对象，那么线程都共享锁。全局锁对应的就是static synchronized（或是锁在该类上的class或者classloader对象上）。
+
+### 4.4.2 实例
+
+关于**实例锁**和**全局锁**很好的例子：
+
+```
+package com.zjl.javase.thread;
+
+public class Something {
+	public synchronized void isSyncA() {
+		
+	}
+	
+	public synchronized void isSyncB() {
+		
+	}
+	
+	public synchronized void cSyncA() {
+		
+	}
+	
+	public synchronized void cSyncB() {
+		
+	}	
+	
+}
+```
+
+假设，类Something有两个实例（对象）分别为x和y。分析下面4组表达式获取锁的情况。
+(1)  x.isSyncA()与x.isSyncB()
+(2)  x.isSyncA()与y.isSyncA()
+(3)  x.cSyncA()与y.cSyncB()
+(4)  x.isSyncA()与Something.cSyncA()
+
+```java
+package com.zjl.javase.thread;
+
+public class LockTest {
+	static class Something {
+		public synchronized void isSyncA() {
+			for(int i=0;i<5;i++){
+                try {
+                    Thread.sleep(100);
+                    System.out.println(Thread.currentThread().getName()+" : isSyncA " +i);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+		}
+		
+		public synchronized void isSyncB() {
+			for(int i=0;i<5;i++){
+                try {
+                    Thread.sleep(100);
+                    System.out.println(Thread.currentThread().getName()+" : isSyncB " +i);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+		}
+		
+		public synchronized void cSyncA() {
+			for(int i=0;i<5;i++){
+                try {
+                    Thread.sleep(100);
+                    System.out.println(Thread.currentThread().getName()+" : cSyncA " +i);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+		}
+		
+		public synchronized void cSyncB() {
+			for(int i=0;i<5;i++){
+                try {
+                    Thread.sleep(100);
+                    System.out.println(Thread.currentThread().getName()+" : cSyncB " +i);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+		}	
+		
+	}
+	
+	Something x = new Something();
+	Something y = new Something();
+	
+	private void test1() {
+		Thread t11 = new Thread(new Runnable(){
+            public void run() {
+                x.isSyncA();    
+                //x.cSyncA();
+            }
+        },"t11");
+
+        Thread t12 = new Thread(new Runnable(){
+            public void run() {
+                x.isSyncB();
+               // y.isSyncA();
+                //y.cSyncB();
+                //Something.cSyncA();
+            }
+        },"t12");
+
+        t11.start();
+        t12.start();
+	}
+	
+	public static void main(String[] args) {
+		LockTest lockTest1 = new LockTest();
+        lockTest1.test1();
+	}
+	
+}
+```
+
+#### 4.4.2.1 x.isSyncA()与x.isSyncB() 不能同时访问
+
+因为， x.isSyncA()与x.isSyncB()都是访问的同一个对象（对象x）的同步锁。
+
+```java
+运行结果：
+t11 : isSyncA 0
+t11 : isSyncA 1
+t11 : isSyncA 2
+t11 : isSyncA 3
+t11 : isSyncA 4
+t12 : isSyncB 0
+t12 : isSyncB 1
+t12 : isSyncB 2
+t12 : isSyncB 3
+t12 : isSyncB 4
+```
+
+#### 4.4.2.2 x.isSyncA()与y.isSyncA()能同时访问
+
+因为，访问的不是同一个对象的同步锁，x.isSyncA()访问的是x的同步锁，而y.isSyncA()访问的是y的同步锁。
+代码只需要在4.4.2.1上的代码将x.isSyncA() 和y.isSyncA()的注释去掉，其他的语句加上注释。
+
+```
+运行结果：
+t11 : isSyncA 0
+t12 : isSyncA 0
+t12 : isSyncA 1
+t11 : isSyncA 1
+t12 : isSyncA 2
+t11 : isSyncA 2
+t11 : isSyncA 3
+t12 : isSyncA 3
+t12 : isSyncA 4
+t11 : isSyncA 4
+```
 
