java线程笔记提交

--- a/java笔记/线程/线程基础.md
+++ b/java笔记/线程/线程基础.md
@@ -11,7 +11,7 @@
 
 ## 1.1 并发与并行比较：
 
- 	 如果你想要一个程序运行的更快，那么可以将其断开为多个片段，在单独的处理器上运行每个片段。并发是用于多处理器编程的基本工具。为了使程序运行得更快，你必须学习如何利用这些额外的处理器，而则正是并发赋予你的能力。
+ 	 如果你想要一个程序运行的更快，那么可以将其断开为多个片段，在单独的处理器上运行每个片段。并发是用于多处理器编程的基本工具。为了使程序运行得更快，你必须学习如何利用这些额外的处理器，而这正是并发赋予你的能力。
   如果你有一台多处理器的机器，那么就可以在这些处理器之间分部多个任务，从而可以极大的提高吞吐量。这是使用强有力的多处理器Web服务器的常见情况，在为每一个请求分配一个线程的程序中，它可以将大量的用户请求分布到多个CPU上。
   
   **但是，并发通常是提高运行在单处理器上的程序的性能**。
