--- a/java笔记/线程/线程基础.md
+++ b/java笔记/线程/线程基础.md
@@ -843,15 +843,67 @@ notify()是唤醒单个线程；
 
 而notifyAll()是唤醒所有的线程。
 
-|   API接口   |                API说明                 |
-| :---------: | :------------------------------------: |
-|  notify()   |    唤醒此对象监视器上等待的单个线程    |
-| notifyAll() |    唤醒此对象监视器上等待的所有线程    |
-|   wait()    | 让当前线程处于"等待（阻塞）状态"，直到 |
-|             |                                        |
-|             |                                        |
+|           API接口            |                           API说明                            |
+| :--------------------------: | :----------------------------------------------------------: |
+|           notify()           |               唤醒此对象监视器上等待的单个线程               |
+|         notifyAll()          |               唤醒此对象监视器上等待的所有线程               |
+|            wait()            | 让当前线程处于"等待（阻塞）状态"，直到其他线程调用此对象notify()方法或notifyAll()方法，当前线程被唤醒（进入“就绪状态”） |
+|      wait(long timeout)      | 让当前线程处于"等待（阻塞）状态"，直到其他线程调用此对象notify()方法胡总notifyAll()方法或超过指定的时间量，当前线程被唤醒（进入“就绪状态”） |
+| wait(long timeout,int nanos) | 让当前线程处于"等待（阻塞）状态"，直到其他线程调用此对象notify()方法或notifyAll()方法或其他某个线程中断当前线程或已超过某个实际时间量，当前线程被唤醒（进入"就绪状态"） |
 
+## 6.2 wait() 和 notify()示例
 
+```java
+public class WaitTest {
+
+	
+	/**
+	 * @param args
+	 */
+	public static void main(String[] args) {
+		
+		class ThreadA extends Thread{
+			
+			public ThreadA(String name){
+				super(name);
+			}
+			
+			@Override
+			public void run() {
+				synchronized(this){
+					System.out.println(Thread.currentThread().getName()+" 正在执行");
+					
+					System.out.println(Thread.currentThread().getName()+" 现在要执行， call notify()");
+					notify();
+				}
+				
+			}
+		}
+
+		  ThreadA t1 = new ThreadA("t1");
+		  
+		  synchronized(t1){
+			  //启动线程t1
+			  System.out.println(Thread.currentThread().getName()+" start t1");
+			  t1.start();
+			  			 
+			  try {
+				//主线程等待t1通过 notify（）唤醒。
+				System.out.println(Thread.currentThread().getName()+" wait()");
+				t1.wait();
+			} catch (InterruptedException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
+			  
+			  System.out.println(Thread.currentThread().getName()+" continue");
+			  
+		  }
+	}
+
+}
+
+```
 
 
 
