--- a/java笔记/线程/线程基础.md
+++ b/java笔记/线程/线程基础.md
@@ -854,54 +854,53 @@ notify()是唤醒单个线程；
 ## 6.2 wait() 和 notify()示例
 
 ```java
-public class WaitTest {
+package com.zjl.javase.thread;
 
-	
-	/**
-	 * @param args
-	 */
+public class waitTest {
 	public static void main(String[] args) {
-		
 		class ThreadA extends Thread{
-			
-			public ThreadA(String name){
+			public ThreadA(String name) {
 				super(name);
 			}
-			
+
 			@Override
 			public void run() {
-				synchronized(this){
-					System.out.println(Thread.currentThread().getName()+" 正在执行");
+				synchronized(this) {
+					System.out.println(Thread.currentThread().getName() +"正在执行");
 					
-					System.out.println(Thread.currentThread().getName()+" 现在要执行， call notify()");
+					System.out.println(Thread.currentThread().getName() +"现在要执行 call notify()");
 					notify();
 				}
-				
 			}
+			
 		}
-
-		  ThreadA t1 = new ThreadA("t1");
-		  
-		  synchronized(t1){
-			  //启动线程t1
-			  System.out.println(Thread.currentThread().getName()+" start t1");
-			  t1.start();
-			  			 
-			  try {
-				//主线程等待t1通过 notify（）唤醒。
-				System.out.println(Thread.currentThread().getName()+" wait()");
+		
+		ThreadA t1 = new ThreadA("t1");
+		
+		synchronized(t1) {
+			//启动线程 t1
+			System.out.println(Thread.currentThread().getName() +" start t1");
+			t1.start();
+			try {
+				//主线程等待t1通过notify() 唤醒
+				System.out.println(Thread.currentThread().getName()+ "  wait()");
 				t1.wait();
-			} catch (InterruptedException e) {
-				// TODO Auto-generated catch block
+			} catch (Exception e) {
 				e.printStackTrace();
 			}
-			  
-			  System.out.println(Thread.currentThread().getName()+" continue");
-			  
-		  }
+			
+			System.out.println(Thread.currentThread().getName() +"continue");
+			
+		}
 	}
-
 }
+
+运行结果：
+main start t1
+main  wait()
+t1正在执行
+t1现在要执行 call notify()
+maincontinue
 
 ```
 
