--- a/java笔记/面向对象/面向过程编程与面向对象编程.md
+++ b/java笔记/面向对象/面向过程编程与面向对象编程.md
@@ -1,6 +1,6 @@
 # 1.面向过程
 
-![](java相关资源\面向过程编程.jpg)
+![](图片\面向过程编程.jpg)
 
 ```
 1）：面向过程就是分析出解决问题所需要的步骤，然后用函数把这些步骤一步一步实现，使用的时候一个一个依次调用就可以了。
@@ -10,9 +10,9 @@
 
 # 2.面向对象
 
-![](java相关资源\面向对象编程.jpg)
+![](图片\面向对象编程.jpg)
 
-![](java相关资源\面向对象编程特点.jpg)
+![](图片\面向对象编程特点.jpg)
 
 ```
 1）：面向对象是以对象为中心的编程思想
