java线程笔记提交

--- a/java笔记/线程/线程基础.md
+++ b/java笔记/线程/线程基础.md
@@ -904,39 +904,495 @@ main continue
 
 ```
 
+```
+结果解释：
+（1）主线程通过new ThreadA("t1") 新建线程t1，随后通过synchronized获取t1对象的同步锁；
+（2）然后调用t1.start()启动线程t1，主线程执行t1.wait(),释放t1对象的锁，并且进入等待（阻塞）状态，等待t1对象上的线程通过notify()或者notifyAll()将其唤醒；
+（3）线程t1运行之后，通过synchronized(this),获取当前对象的锁，接着通过调用notify()唤醒，当前对象上的等待线程，也就是唤醒主线程；
+（4）线程t1运行完毕后，释放当前对象的锁，紧接着，主线程获取t1对象的锁，然后接着运行。
+```
+
+```
+注意：
+t1.wait()为什么不是让线程t1等待，而是让主线程main等待？
+JDK解释中说，wait()的作用是让当前线程等待，而当前线程指的是正在CPU上运行的线程！
+这就意味着，虽然t1.wait()是通过线程t1调用wait()方法，但是调用t1.wait()的地方是在主线程main中。
+而主线程必须是当前线程，也就是运行状态，才可以执行t1.wait();
+所以当前线程是主线程main。因此，t1.wait()是让主线程等待，而不是线程t1
+```
+
+## 6.3 wait(long timeout)和notify()示例
+
+```java
+package com.zjl.javase.thread;
+
+public class WaitTimeoutTest {
+	public static void main(String[] args) {
+		class ThreadA extends Thread {
+			public ThreadA(String name) {
+				super(name);
+			}
+
+			@Override
+			public void run() {
+				System.out.println(Thread.currentThread().getName() + " run");
+				// 死循环
+				while (true)
+					;
+			}
+		}
+
+		ThreadA t1 = new ThreadA("t1");
+		synchronized (t1) {
+			try {
+				// 启动“线程t1”
+				System.out.println(Thread.currentThread().getName() + " start t1");
+				t1.start();
+
+				// 主线程等待t1通过notify()唤醒 或 notifyAll()唤醒，或超过3000ms延时；然后才被唤醒。
+				System.out.println(Thread.currentThread().getName() + " call wait ");
+				t1.wait(3000);
+
+				System.out.println(Thread.currentThread().getName() + " continue");
+			} catch (InterruptedException e) {
+				e.printStackTrace();
+			}
+		}
+
+	}
+}
+
+运行结果：
+main start t1
+main call wait 
+t1 run			//大约3秒之后，输出“main continue”
+main continue
+
+```
+
+```
+流程解释：
+（1）主线程通过new ThreadA(“t1”);新建线程1，随后通过synchronized(this)获取“t1对象的同步锁”。
+（2）主线程main执行t1.start()启动“线程t1”。
+（3）主线程main执行t1.wait(3000)，此时，主线程进入“阻塞状态”。需要“用于t1对象锁的线程通过notify()或者notifyAll()将其唤醒”或者“超过3000ms之后”，主线程main才进入“就绪状态”，然后才可以运行。
+（4）线程t1运行之后，进入死循环，会一直不断的运行。
+（5）超过3000ms之后，主线程会进入到“就绪状态”，然后接着进入“运行状态”。主线程main和线程t1会一直运行下去。
+```
+
+## 6.4 wait()和notifyAll()示例
+
+通过当前的示例，我们知道notify()可以唤醒在此对象监视器上等待的单个线程，notifyAll()的作用是唤醒在此对象监视器上等待的所有线程。
+
+```
+package com.zjl.javase.thread;
+
+public class NotifyAllTest {
+private static Object obj = new Object();
+	
+	static class ThreadA extends Thread{
+		
+		public ThreadA(String name){
+			super(name);
+		}
+		
+		@Override
+		public void run() {
+			
+			synchronized(obj){
+				
+				try {
+					System.out.println(Thread.currentThread().getName()+" wait");
+					
+					obj.wait();
+					
+					System.out.println(Thread.currentThread().getName() + " continue");
+				} catch (InterruptedException e) {
+			
+					e.printStackTrace();
+				}
+			}
+		}
+	}
+	/**
+	 * @param args
+	 */
+	public static void main(String[] args) {
+
+		 ThreadA t1 = new ThreadA("t1");
+	     ThreadA t2 = new ThreadA("t2");
+	     ThreadA t3 = new ThreadA("t3");
+	     t1.start();
+	     t2.start();
+	     t3.start();
+	         
+	     try {
+	    	System.out.println(Thread.currentThread().getName()+" sleep(3000)");
+			Thread.sleep(3000);
+		} catch (InterruptedException e) {
+		
+			e.printStackTrace();
+		}
+		
+	     synchronized(obj){
+	    	 System.out.println(Thread.currentThread().getName()+ " notifyAll()");
+	    	 obj.notifyAll();
+	     }
+	}
+}
+
+运行结果（结果不唯一）：
+main sleep(3000)
+t1 wait
+t2 wait
+t3 wait
+main notifyAll()
+t3 continue
+t2 continue
+t1 continue
+```
+
+```
+流程分析：
+（1）主线程中新建并启动3个线程t1、t2和t3，并调用start() 方法进入“就绪状态”，然后可能会进入“运行状态”，所以“main sleep(3000)”不一定是第一个输出，可能会是第二个，这要看CPU 时间片执行到那个线程。t1、t2和t3线程那个先执行时，会调用“obj.wait();”阻塞当前线程进入“阻塞状态”，所以t1、t2和t3线程也会依次进入“阻塞状态”，等待其它线程通过notify()或额nofityAll()来唤醒它。
+（2）主线程通过sleep(3000)休眠3秒。在主线程休眠3秒的过程中，t1、t2和t3线程应该都运行了。
+（3）主线程休眠3秒后，接着运行。执行obj.notifyAll();唤醒obj上等待的线程，即唤醒t1、t2和t3线程。然后，主线程的synchronized（obj）运行完毕，主线程释放“obj对象锁”。这样t1、t2和t3线程就可以获取“obj锁”继续运行。
+```
+
+## 6.5 为什么notify()、wait()等函数定义在Object类中而不是Thread类中
+
+​		Object中的wait()、notify()等函数和synchronized一样，会对“对象的同步锁”进行操作。wait()会使“当前线程”等待，因为线程应该释放它所持有的“同步锁”，否则其他线程获取不到该“同步锁”而无法运行。线程调用wait()之后，会释放它所持有的“同步锁”；而且，等待线程可以被notify()或notifyAll()唤醒。那么notify()是依据什么唤醒等待线程的？或者wait()和notify()之间是通过什么关联起来的？答案是：依据**“对象的同步锁”**。
+  负责唤醒等待线程的那个线程（我们称为“唤醒线程”），它只有在获取“该对象的同步锁”（**这里的同步锁必须和等待线程的同步锁是同一个**），并且调用notify()或notifyAll()方法之后，才能唤醒等待线程。虽然，等待线程被唤醒，但是，它不能立即执行。因为唤醒线程还持有“该对象的同步锁”。必须等到唤醒线程释放“该对象的同步锁”之后，等待线程才能获取到“对象的同步锁”，然后继续运行。
+  总之，**notify()、wait()依赖于“同步锁”，而“同步锁”是该对象所持有，并且每个对象有且仅有一个**。所以，你可以把wait()方法放进任何同步控制方法里，而不用考虑这个类是继承自Thread还是实现了Runnable接口。这就是为什么notify()、wait()等函数定义在Object类，而不是Thread类中的原因。实际上，只能在同步控制方法或同步控制块里调用wait()、notify()和notifyAll()（因为不用操作锁，所以sleep()可以在非同步控制方法里调用）。如果在非同步控制方法里调用这些方法，程序可以通过编译，但运行时将得到IllegalMonitorStateException异常，异常的大概是当前线程不是拥有者。意思是，**调用wait()、notify()和notifyAll()的任务在调用这些方法前必须获取对象的锁**。
+
+# 七、线程让步和休眠
+
+## 7.1 线程让步
+
+​		在Java线程中，**yield()方法的作用是让步**，它能让当前线程由“运行状态”进入到“就绪状态”，从而让其他具有相同优先级的等待线程获取执行权；但是，**并不能保证在当前线程调用yield()之后，其他具有相同优先级的线程就一定能获得执行权；也有可能是当前线程有进入到“运行状态”继续运行**。
+
+```java
+package com.zjl.javase.thread;
+
+public class YieldTest {
+	public static void main(String[] args) {
+
+		class ThreadA extends Thread{
+			public ThreadA(String name){
+				super(name);
+			}
+			
+			@Override
+			public synchronized void run() {
+
+				for(int i=0;i<10;i++){
+					System.out.println(" "+this.getName()+" "+i);
+					
+					if(i%2 == 0){
+						Thread.yield();
+					}
+				}
+			}
+		}
+		
+		ThreadA t1 = new ThreadA("t1");
+		ThreadA t2 = new ThreadA("t2");
+		t1.start();
+		t2.start();
+
+	}
+
+}
+
+运行结果：
+ t1 0
+ t2 0
+ t1 1
+ t1 2
+ t1 3
+ t1 4
+ t1 5
+ t1 6
+ t1 7
+ t1 8
+ t1 9
+ t2 1
+ t2 2
+ t2 3
+ t2 4
+ t2 5
+ t2 6
+ t2 7
+ t2 8
+ t2 9
+```
+
+```
+结果说明：
+	线程t1在能被2整除的时候，并不一定切换到线程2。这表明，yield()方法虽然可以让线程由“运行状态”进入到“就绪状态”；但是，它不一定会让其他线程获取CPU执行权（其他线程进入到“运行状态”）。即时这个“其他线程”与当前调用yield()的线程具有相同的优先级。
+```
+
+## 7.2 yield()和wait()比较
+
+​		wait()的作用是让当前线程由“运行状态”进入到“等待（阻塞）”的同时，也会释放同步锁。而yield()的作用是让步，它也是让当前线程离开“运行状态”。区别是：
+（1）wait()是让线程由“运行状态”进入到“等待（阻塞）状态”，而yield()是让线程由“运行状态”进入到“就绪状态”。
+（2）wait()是会让线程释放它所持有的对象的同步锁，而yield()方法不会释放对象的同步锁。
+
+```java
+package com.zjl.javase.thread;
+
+public class YieldLockTest {
+	public static void main(String[] args) {
+
+		final Object obj = new Object();
+		
+           class ThreadA extends Thread{
+  			
+			public ThreadA(String name){
+				super(name);
+			}
+			
+			@Override
+			public void run() {
+				synchronized(obj){
+					for(int i=0;i<10;i++){
+						System.out.println(this.getName()+" "+i);
+						if(i%4==0){
+							Thread.yield();
+						}
+					}
+				}
+			}
+		}
+	
+		ThreadA  t1 = new ThreadA("t1");
+		ThreadA  t2 = new ThreadA("t2");
+		t1.start();
+		t2.start();
+
+	}
+
+}
+
+运行结果：
+t1 0
+t1 1
+t1 2
+t1 3
+t1 4
+t1 5
+t1 6
+t1 7
+t1 8
+t1 9
+t2 0
+t2 1
+t2 2
+t2 3
+t2 4
+t2 5
+t2 6
+t2 7
+t2 8
+t2 9
+```
+
+```
+结果说明：
+	线程t1和t2在run()会引用同一个对象的同步锁，即synchronized(obj)，在t1运行过程中，虽然它会调用Thread.yield()；但是，t2是没有获取到CPU执行权的，因为，t1并没有释放“obj所持有的同步锁”。
+```
+
+## 7.3 线程休眠
+
+​	sleep()方法定义在Thread类中，sleep()的作用是让当前线程休眠，即当前线程会从“运行状态”进入到“休眠（阻塞）状态”。sleep()会指定休眠时间，线程休眠的时间会大于/等于该休眠时间；在线程重新被唤醒时，它会由“阻塞状态”变成“就绪状态”，从而等待CPU的调度执行。（线程只能从就绪状态进入运行状态）
+
+## 7.4 sleep()和wait()的比较
+
+​	wait()的作用是让当前的线程由“运行状态”进入到“等待（阻塞）状态”的同时，也会释放同步锁。但是sleep()的作用是让当前线程由“运行状态”进入到“休眠（阻塞）”状态。**wait()会释放对象的同步锁，而sleep()则不会释放锁**。
+
+```
+package com.zjl.javase.thread;
+
+public class RunnableTest2 {
+	public static void main(String[] args) {
+final Object obj = new Object();
+		
+		class MyThread extends Thread{
+			
+			public MyThread(String name){
+				super(name);
+			}
+			@Override
+			public void run() {
+				synchronized(obj){
+					for(int i=0;i<10;i++){
+						try {
+							 if (i%4 == 0)
+								 Thread.sleep(100);
+							System.out.println(Thread.currentThread().getName()+" loop "+i);
+						} catch (InterruptedException e) {
+							// TODO Auto-generated catch block
+							e.printStackTrace();
+						}
+					}
+				}
+			}
+		}
+		
+		Thread t1 = new MyThread("t1");
+		Thread t2 = new MyThread("t2");
+		t1.start();
+		t2.start();
+
+	}
+}
+
+运行结果：
+t2 loop 0
+t2 loop 1
+t2 loop 2
+t2 loop 3
+t2 loop 4
+t2 loop 5
+t2 loop 6
+t2 loop 7
+t2 loop 8
+t2 loop 9
+t1 loop 0
+t1 loop 1
+t1 loop 2
+t1 loop 3
+t1 loop 4
+t1 loop 5
+t1 loop 6
+t1 loop 7
+t1 loop 8
+t1 loop 9
+```
+
+```
+结果说明：
+	主线程main中启动两个线程t1和t2，t1和t2在run()方法中会引用同一个对象的同步锁，即synchronized(obj)。在t2运行过程中，虽然它会调用Thread.sleep(100)，但是，t1是不会获取CPU执行权的。因为，t1并没有释放“obj所持有的同步锁”。如果，注释掉synchronized(obj)或再次执行该程序，t1和t2是可以相互切换的。
+```
+
+# 八、join()方法和interrupt()方法
+
+## 8.1 加入一个线程
+
+​		**一个线程可以在其他线程之上调用join()方法**，其**效果是等待一段时间直到第二个线程结束结束才继续执行**。如果某个线程在另一个线程t上调用t.join()，此线程将被挂起，直到目标线程t结束才恢复（**即t.isAlive()返回为假**）。也可以在调用jion()时带上一个**超时参数**（单位可以是毫秒，或者纳秒），这样如果目标线程在这段时间到期时还没有结束的话，join()方法总能返回。对**join()方法的调用可以被中断，做法是在调用线程上调用interrupt()方法**，这时需要用到**try_catch**子句。
+
+## 8.2 join()源码分析和实例
+
+```java
+//无参数的join()方法
+public final void join() throws InterruptedException {
+        join(0);
+}
+
+//两个参数的join()方法
+public final synchronized void join(long millis, int nanos)throws InterruptedException {
+
+        if (millis < 0) {
+            throw new IllegalArgumentException("timeout value is negative");
+        }
+
+        if (nanos < 0 || nanos > 999999) {
+            throw new IllegalArgumentException(
+                                "nanosecond timeout value out of range");
+        }
+
+        if (nanos >= 500000 || (nanos != 0 && millis == 0)) {
+            millis++;
+        }
+
+        join(millis);
+    }
+    
+//一个参数的join()方法
+public final synchronized void join(long millis)throws InterruptedException {
+        long base = System.currentTimeMillis();
+        long now = 0;
+
+        if (millis < 0) {
+            throw new IllegalArgumentException("timeout value is negative");
+        }
+
+        if (millis == 0) {
+            while (isAlive()) {
+                wait(0);
+            }
+        } else {
+            while (isAlive()) {
+                long delay = millis - now;
+                if (delay <= 0) {
+                    break;
+                }
+                wait(delay);
+                now = System.currentTimeMillis() - base;
+            }
+        }
+    }
+```
+
+**源码说明：**
+		主要是无参数和一个参数的join()方法，从代码中可以发现，当mills == 0 时，会进入while(isAlive())循环，即只要调用该join()方法的线程是活的，那么当前线程就要不停等待。（wait()是让当前线程等待）。
+
+```java
+package com.zjl.javase.thread;
+
+public class JoinTest {
+	public static void main(String[] args) {
 
 
+		class ThreadA extends Thread{
+			
+			public ThreadA(String name){
+				super(name);
+			}
+			
+			@Override
+			public void run() {
+				System.out.println("start "+this.getName());
+				
+				for(int i=0;i<1000000000;i++)
+					;
+				
+				System.out.println("finish "+ this.getName());
+			}
+		}
 
+		Thread t1 = new ThreadA("t1");
+		t1.start();
+		
+		try {
+			
+			t1.join();
+			
+			System.out.println("finish "+Thread.currentThread().getName());
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+	}
 
+}
 
+运行结果：
+start t1
+finish t1
+finish main
+```
 
+```
+结果说明：
+	在主线程main中新建线程t1，接着，通过t1.start()启动线程t1，并执行t1.join()。然后，主线程会进入“阻塞状态”等待t1运行结束。t1结束之后，会唤醒主线程main，主线程重新获取CPU执行权，继续运行。
+```
 
+## 8.3 interrupt() 方法
 
+​		**interrupt()的作用是中断本线程**。**本线程中断自己是被允许的；其他线程调用本线程的interrupt()方法时，会通过checkAccess()检查权限**。这有可能抛出**SecurityException**异常。
+  如果本线程是处于阻塞状态：调用线程的wait()，wait(long)或wait(long,int)会让它进入等待（阻塞）状态，或者调用线程的join()，join(long)，join(long,int)，sleep(long)，sleep(long,int)也会让它进入阻塞状态。若**线程在阻塞状态时，调用了它的interrupt()方法，那么它的“中断状态”会被清理并且会收到一个InterruptedException异常**。例如，线程通过wait()进入阻塞状态，此时通过interrupt()中断该线程，调用interrupt()会立即将线程的中断标记设置为“true”，但是由于线程处于阻塞状态，所以该“中断标记”会立即被清除为“false”,同时，会产生一个InterruptedException异常。
+  **如果线程被阻塞在一个Selector选择器中，那么通过interrupt()中断它时，线程的中断标记会被设置为true，并且它会立即从选择操作中返回**。
+  **如果不属于前面所说的的情况，那么通过interrupt()中断线程时，它的中断标记会被设置为true。中断一个“已经终止的线程”不会产生任何操作**。
 
+## 8.4 线程终止的方式
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+​		**Thread中的stop()和suspend()方法，由于固有的不安全性，已经不建议使用**。下面，通过讨论线程在“阻塞状态”和“运行状态”的终止方式，然后在总结一个通用的方式。
