--- a/java笔记/线程/线程基础.md
+++ b/java笔记/线程/线程基础.md
@@ -1395,4 +1395,305 @@ finish main
 
 ## 8.4 线程终止的方式
 
-​		**Thread中的stop()和suspend()方法，由于固有的不安全性，已经不建议使用**。下面，通过讨论线程在“阻塞状态”和“运行状态”的终止方式，然后在总结一个通用的方式。
+​		**Thread中的stop()和suspend()方法，由于固有的不安全性，已经不建议使用**。下面，通过讨论线程在“阻塞状态”和“运行状态”的终止方式，然后在总结一个通用的方式
+
+### 8.4.1 终止处于"阻塞状态"的线程
+
+​	通常，我们通过“中断”方式终止处于“阻塞状态”的线程。当线程由于被调用了sleep()，wait()，join()等方法而进入阻塞状态；若此时调用线程的interrupt()将线程的中断标记设为true。由于处于阻塞状态，中断标记会被清除，同时产生InterruptedException异常。将InterruptedException放在适当的为止就能终止线程，形如如下：
+
+```java
+@Override
+public void run() {
+    try {
+        while (true) {
+            // 执行任务...
+        }
+    } catch (InterruptedException ie) {  
+        // 由于产生InterruptedException异常，退出while(true)循环，线程终止！
+    }
+}
+```
+
+```
+说明：
+	在while(true)中不断的执行任务，当线程处于阻塞状态时，调用线程的interrupt()产生InterruptedException异常中断。中断的捕获在while(true)之外，这样就退出while(true)循环。
+```
+
+```
+注意：
+	对InterruptedException的捕获一般放在while（true）循环体的外面，这样产生异常时就退出了while（true）循环。否则，InterruptedException在while（true）循环体之内，就需要额外的添加退出处理。形式如下：
+```
+
+```java
+@Override
+public void run() {
+    while (true) {
+        try {
+            // 执行任务...
+        } catch (InterruptedException ie) {  
+            // InterruptedException在while(true)循环体内。
+            // 当线程产生了InterruptedException异常时，while(true)仍能继续运行！需要手动退出
+            break;
+        }
+    }
+}
+```
+
+```
+说明：
+	上面的InterruptedException异常捕获在while（true）之内。当产生InterruptedException异常时，被catch处理之外，仍然在while（true）循环体内；要退出while（true）循环体，需要额外的执行退出while（true）的操作。
+```
+
+### 8.4.2 终止处于"运行状态"的线程
+
+​	通常，我们通过“标记”方式终止处于“运行状态”的线程。其中包括“中断标记”和“额外添加标记”。
+
+#### 8.4.2.1 通过“中断标记”终止线程
+
+```java
+@Override
+public void run() {
+    while (!isInterrupted()) {
+        // 执行任务...
+    }
+}
+```
+
+```
+说明：
+	isInterrupted()来判断线程中的中断标记是不是为true。当线程处于运行状态，并且我们需要终止它时，可以调用线程的interrupt()方法，使用线程的中断标记为true，即isInterrupted()方法会返回true。此时，就会退出while循环
+```
+
+```
+注意：
+	interrupt()并不会终止处于“运行状态”的线程，它会将线程的中断标记设为true。
+```
+
+#### 8.4.2.2 通过"中断标记"终止线程的实例
+
+```java
+package com.zjl.javase.thread;
+
+public class InterruptBlock {
+	/**
+	 * @param args
+	 */
+	public static void main(String[] args) {
+
+
+		class MyThread extends Thread{
+			
+			public MyThread(String name){
+				super(name);
+			}
+			
+			@Override
+			public void run() {	
+				try {
+					int i=0;
+					while(!isInterrupted()){
+					     Thread.sleep(100);
+					     i++;
+					     System.out.println(Thread.currentThread().getName()+ " ("+this.getState()+") loop "+i);
+					}
+				} catch (InterruptedException e) {
+					e.printStackTrace();
+					System.out.println(Thread.currentThread().getName()+ " ("+this.getState()+") catch InterruptedExecption");
+				}	
+				
+			}
+		}
+		
+		
+		try {
+			
+			//新建
+			Thread t1 = new MyThread("t1");
+			System.out.println(t1.getName()+" ("+t1.getState()+" ) is new.");
+			
+			System.out.println("luo1:"+t1.isInterrupted());
+			//启动
+			t1.start();
+			System.out.println(t1.getName()+" ("+t1.getState()+" ) is started.");
+			System.out.println("luo2:"+t1.isInterrupted());
+			//主线程休眠300ms，然后主线程给t1发“中断”指令
+			Thread.sleep(300);
+			t1.interrupt();
+			System.out.println("luo3:"+t1.isInterrupted());
+			System.out.println(t1.getName()+" ("+t1.getState()+" ) is interrupted.");
+			
+			//主线程休眠300ms，然后查看t1的状态
+			Thread.sleep(300);
+			System.out.println(t1.getName()+" ("+t1.getState()+" ) is interrupted now .");
+			
+			
+		} catch (InterruptedException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		
+	}
+
+}
+
+运行结果：
+t1 (NEW ) is new.
+luo1:false
+t1 (RUNNABLE ) is started.
+luo2:false
+t1 (RUNNABLE) loop 1
+t1 (RUNNABLE) loop 2
+luo3:true
+t1 (TIMED_WAITING ) is interrupted.
+t1 (RUNNABLE) catch InterruptedExecption
+java.lang.InterruptedException: sleep interrupted
+	at java.lang.Thread.sleep(Native Method)
+	at com.zjl.javase.thread.InterruptBlock$1MyThread.run(InterruptBlock.java:21)
+t1 (TERMINATED ) is interrupted now .
+
+```
+
+```
+结果说明：
+（1）主线程mian新建线程t1，之后通过t1.start()启动线程t1；
+（2）t1启动之后，会不断的检查它的中断标记，如果中断标记为“false”，则休眠100ms；
+（3）t1休眠之后，会切换到主线程main，主线程再次运行时，会执行t1.interrupt()中端线程t1。t1收到中断指令之后，会将t1的中断标志设置为“false”，而且会抛出IterruptedException异常。在t1的run()方法中，是在循环体while(true)之外获取的异常，因此循环被终止。
+如果，将run()方法中捕获InterruptedException异常的代码块移到while循环体内，那么程序会变成一个死循环。解决的办法是，可以在catch中添加break或return就可以解决该问题。
+```
+
+
+
+#### 8.4.2.3 通过额外添加标记
+
+```java
+private volatile boolean flag= true;
+protected void stopTask() {
+    flag = false;
+}
+
+@Override
+public void run() {
+    while (flag) {
+        // 执行任务...
+    }
+}
+```
+
+```
+说明：
+	线程中有一个flag标记，它的默认值是true；并且我们提供stopTask()来设置flag标记。当我们需要终止该线程时，调用该线程的stopTask()方法就可以让线程退出while循环。
+```
+
+```
+注意：
+	将flag定义为volatile类型，是为了保证flag的可见性。即其它线程通过stopTask()修改了flag之后，本线程能看到修改后的flag的值
+```
+
+综合线程处于“阻塞状态”和“运行状态”的终止方式，比较通用的终止线程的形式如下：
+
+```java
+@Override
+public void run() {
+    try {
+        // 1. isInterrupted()保证，只要中断标记为true就终止线程。
+        while (!isInterrupted()) {
+            // 执行任务...
+        }
+    } catch (InterruptedException ie) {  
+        // 2. InterruptedException异常保证，当InterruptedException异常产生时，线程被终止。
+    }
+}
+```
+
+#### 8.4.2.4 通过"额外添加标记"终止线程实例
+
+```
+package com.zjl.javase.thread;
+
+public class InterruptBlock2 {
+	/**
+	 * @param args
+	 */
+	public static void main(String[] args) {
+
+
+		class MyThread extends Thread{
+			
+			public MyThread(String name){
+				super(name);
+			}
+			
+			@Override
+			public void run() {	
+				try {
+					int i=0;
+					while(!isInterrupted()){
+					     Thread.sleep(100);
+					     i++;
+					     System.out.println(Thread.currentThread().getName()+ " ("+this.getState()+") loop "+i);
+					}
+				} catch (InterruptedException e) {
+					e.printStackTrace();
+					System.out.println(Thread.currentThread().getName()+ " ("+this.getState()+") catch InterruptedExecption");
+				}	
+				
+			}
+		}
+		
+		
+		try {
+			
+			//新建
+			Thread t1 = new MyThread("t1");
+			System.out.println(t1.getName()+" ("+t1.getState()+" ) is new.");
+			
+			System.out.println("luo1:"+t1.isInterrupted());
+			//启动
+			t1.start();
+			System.out.println(t1.getName()+" ("+t1.getState()+" ) is started.");
+			System.out.println("luo2:"+t1.isInterrupted());
+			//主线程休眠300ms，然后主线程给t1发“中断”指令
+			Thread.sleep(300);
+			t1.interrupt();
+			System.out.println("luo3:"+t1.isInterrupted());
+			System.out.println(t1.getName()+" ("+t1.getState()+" ) is interrupted.");
+			
+			//主线程休眠300ms，然后查看t1的状态
+			Thread.sleep(300);
+			System.out.println(t1.getName()+" ("+t1.getState()+" ) is interrupted now .");
+			
+			
+		} catch (InterruptedException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		
+	}
+
+}
+
+运行结果：
+t1 (NEW ) is new.
+t1 (RUNNABLE ) is started.
+t1 (RUNNABLE) loop 1
+t1 (RUNNABLE) loop 2
+t1 (TIMED_WAITING ) is interrupted.
+t1 (RUNNABLE) loop 3
+t1 (TERMINATED ) is interrupted now .
+```
+
+## 8.5 interrupt()和isInterrupt()的区别
+
+​	interrupt()和isInterrupted()都能够用于检测对象的“中断标记”。
+
+​	区别是：interrupt()除了返回中断标记之外，它还会清除中断标记（即将中断标记设为false）；而isInterrupted()仅仅返回中断标记。
+
+## 8.6 线程优先级和守护线程
+
+​		Java中线程的优先级的范围是1~10，默认的优先级为5。“高优先级线程”会优先于“低优先级线程”执行。而且Java中有两种线程：用户线程和守护线程。可以通过**isDeamon()**方法来区别它们：**如果返回false，则说明该线程是“用户线程”；否则就是“守护线程”**。**用户线程一般用户执行用户级任务**，而**守护线程也就是“后台线程”，一般用来执行后台任务**。需要注意的是：**JVM在“用户线程”都结束后会退出**。
+  每个线程都有一个优先级。**“高优先级线程”会优先于“低优先级线程”执行**。每个线程都可以被标记为一个守护进程或非守护进程。在一些运行的**主线程中创建新的子线程时，子线程的优先级被设置为等于“创建它的主线程的优先级”，当且仅当“创建它的主线程是守护线程”时“子线程才会是守护线程”**。
+
+当**Java虚拟机启动时，通常有一个单一的非守护线程（该线程通过是通过main()方法启动）**。JVM会一直运行直到下面的**任意一个条件发生，JVM就会终止运行**：
+(1) 调用了exit()方法，并且exit()有权限被正常执行。
+(2) 所有的“非守护线程”都死了(即JVM中仅仅只有“守护线程”)。
+
