--- a/java笔记/线程/线程进阶.md
+++ b/java笔记/线程/线程进阶.md
@@ -1,4 +1,4 @@
-​		Java 5 添加了一个新的包到Java平台，这个包是java.util.concurrent包（简称JUC）。这个包包含了有一系列能够让Java的并发编程更加轻松的类。（本文使用的Java 7 版本的JUC）。
+		Java 5 添加了一个新的包到Java平台，这个包是java.util.concurrent包（简称JUC）。这个包包含了有一系列能够让Java的并发编程更加轻松的类。（本文使用的Java 7 版本的JUC）。
 
 # 一、线程池
 
@@ -621,25 +621,219 @@ public class LockAndUnLock {
 ​		可以看出一个被互斥调用的锁，并使用**lock()和unlock()**方法在numPrint()内**创建了临界资源**。当你在使用Lock对象时，将这里的所示的惯用法内部化是很重要的：**紧接着的对lock()的调用，你必须放再finally子句中带有unlock()的try-finally语句中**。尽管try-finally所需的代码比synchronized关键字要多，但是这也代表了显示的Lock对象的优点之一。如果在**使用synchronized关键字，某些事务失败了，那么就会抛出一个异常。但是你没有机会去做任何清理工作，以维护系统使其处于良好状态**。有了**显示的Lock对象，你就可以使用finally子句将系统维护在正确的状态了**。
   大体上，当你使用synchronized关键字时，需要写的代码量更少，并且用户错误出现的可能性也会降低，因此**通常只有在解决特殊问题时，才使用显示的Lock对象**。
 
+# 三、JUC的原子类
+
+​	在Java SE5 中java.util.concurrent.atomic包下提供了一系列支持无锁线程安全修改操作的基础变量。这些原子类是对volatile机制的扩展，并提供下面形式的原子性条件更新操作：
+
+```java
+boolean compareAndSet(expectedValue, updateValue);
+```
+
+每个Atomic类基本都有这个方法，compareAndSet通过原子实现CAS操作，最底层基本基于汇编语言实现。 
+CAS是compareAndSet的一个简称： 
+（1）以知当前内存里面的值current和预期要传的值（expectedValue）进行比较（==） 
+（2）**如果比价（==）相等，返回true，更新值为updateValue**；**如果不相等，返回false，值不改变**。
+
+![](CAS相关文件.png)
 
 
 
+Atomic包下的原子类有哪些？上面是JDK 1.7.0_17中源码的截图：
+
+在atomic包下有12个类，这些类大致可以划分为四种类型： 
+
+（1）基本原子类：AtomicInteger，AtomicLong，AtomicBoolean这3个基本类型的原子类 
+（2）数组原子类：AtomicIntegerArray，AtomicLongArray，AtomicReferenceArray这3个原子类 
+（3）引用原子类：AtomicReference，AtomicStampedRerence,，AtomicMarkableReference这3个原子类 
+（4）对象属性修改原子类：AtomicIntegerFiledUpdater，AtomicLongFieldUpdater，AtomicReferenceFieldUpdater这3个原子类 
+
+## 3.1 基本原子类
+
+### 3.1.1 AtomicBoolean
+
+```java
+package com.zjl.javase.thread;
+
+import java.util.concurrent.atomic.AtomicBoolean;
+
+public class atomticTest {
+	/**
+     * @param args
+     */
+    public static void main(String[] args) {
+
+        AtomicBoolean atomicBoolean = new AtomicBoolean();
+
+        System.out.println("atomicBoolean默认值为:"+atomicBoolean.get());
+
+        atomicBoolean.set(true);
+        System.out.println("atomicBoolean set设置值为："+atomicBoolean.get());
+
+        //以原子方式设置为给定值，并返回以前的值
+        Boolean oldValue = atomicBoolean.getAndSet(true);
+        System.out.println("getAndSet返回以前的值为："+oldValue);
+        System.out.println("atomicBoolean现在的值为："+atomicBoolean.get());
+
+        boolean expectedValue = false;
+        boolean newValue = true;
+
+        boolean value = atomicBoolean.compareAndSet(expectedValue, newValue);
+        System.out.println("compareAndSet后返回的值："+value);
+        System.out.println("atomicBoolean现在的值为："+atomicBoolean.get());
+    }
+
+}
+运行结果：
+atomicBoolean默认值为:false
+atomicBoolean set设置值为：true
+getAndSet返回以前的值为：true
+atomicBoolean现在的值为：true
+compareAndSet后返回的值：false
+atomicBoolean现在的值为：true
+```
+
+compareAndSet()方法简单说明介绍： 
+	compareAndSet()方法允许你对AtomicBoolean的当前值与一个期望值进行比较，**如果当前值等于期望值的话，将会对AtomicBoolean设置一个新值（即，第二个参数）**。**如果不等于期望值的，AtomicBoolean将返回期望的值（即，第一个参数）,AtomicBoolean的值还是原来的值**。
+
+注意：
+
+AtomicBoolean的返回值和AtomicBoolean得到的值。
+
+### 3.1.2 AtomicInteger 和 AtomicLong
+
+AtomicLong和AtomicInteger的用法基本一致，只是数据的基本类型不一样，下面以AtomicInteger为例，来说明用法： 
+
+```java
+package com.zjl.javase.thread;
+
+import java.util.concurrent.atomic.AtomicInteger;
+
+public class AtomicIntegerTest {
+	/**
+     * @param args
+     */
+    public static void main(String[] args) {
+
+        AtomicInteger integer = new AtomicInteger(123);
+        System.out.println(integer);
+        // 以原子方式设置当前值时
+        integer.set(147);
+
+        int expect = 147;
+        int update = 300;
+        // 如果当前值 == expect，则以原子方式将该值设置为update。成功返回true，否则返回false，并且不修改原值。
+        integer.compareAndSet(expect, update);
+        System.out.println(integer);
+
+        //以原子方式将当前值加1，并返回加1前的值。等价于“num++”
+        System.out.println("getAndIncrement的值："+integer.getAndIncrement());
+        //以原子方式将当前值加1，并返回加1后的值。等价于“++num”
+        System.out.println("incrementAndGet的值："+integer.incrementAndGet());
+        //以原子方式将当前值减1，并返回减1前的值。等价于“num--”
+        System.out.println("getAndDecrement的值为："+integer.getAndDecrement());
+        //以原子方式将当前值减1，并返回减1后的值。等价于“--num”
+        System.out.println("decrementAndGet的值为："+integer.decrementAndGet());
+        //以原子方式将当前值加10，并返回加10后的值
+        System.out.println("addAndGet的值为："+integer.addAndGet(10));
+        //以原子方式将当前值加10，并返回加10前的值
+        System.out.println("getAndAdd的值为："+integer.getAndAdd(10));
+    }
+
+}
+
+运行结果：
+123
+300
+getAndIncrement的值：300
+incrementAndGet的值：302
+getAndDecrement的值为：302
+decrementAndGet的值为：300
+addAndGet的值为：310
+getAndAdd的值为：310    
+```
+
+## 3.2 引用原子类
+
+### 3.2.1 AtomicReference
+
+​	AtomicReference提供了一个可以被原子性读和写的**对象**引用变量。原子性的意思是多个想要改变同一个AtomicReference的线程不会导致AtomicReference处于不一致的状态。 
+AtomicReference函数列表：
+
+```java
+// 使用 null 初始值创建新的 AtomicReference。
+AtomicReference()
+// 使用给定的初始值创建新的 AtomicReference。
+AtomicReference(V initialValue)
+
+// 如果当前值 == 预期值，则以原子方式将该值设置为给定的更新值。
+boolean compareAndSet(V expect, V update)
+// 获取当前值。
+V get()
+// 以原子方式设置为给定值，并返回旧值。
+V getAndSet(V newValue)
+// 最终设置为给定值。
+void lazySet(V newValue)
+// 设置为给定值。
+void set(V newValue)
+// 返回当前值的字符串表示形式。
+String toString()
+// 如果当前值 == 预期值，则以原子方式将该值设置为给定的更新值。
+boolean weakCompareAndSet(V expect, V update)
+```
+
+```java
+package com.zjl.javase.thread;
+
+import java.util.concurrent.atomic.AtomicReference;
+
+public class AtomicReferenceTest {
+	public static void main(String[] args) {
 
 
+        Student stu1 = new Student(123);
+        Student stu2 = new Student(456);
+        Student stu3 = new Student(789);
 
+        AtomicReference reference = new AtomicReference(stu1);
 
+        reference.compareAndSet(stu2, stu3);
 
+        System.out.println(((Student) reference.get()).getAge());
 
+        //创建泛型AtomicReference
+        AtomicReference<String> refer = new AtomicReference("atmoicReference about generic");
+        String str = refer.get();
+        System.out.println(str);
 
+    }
+}
 
+class Student{
+	private int age;
 
+	public int getAge() {
+		return age;
+	}
 
+	public void setAge(int age) {
+		this.age = age;
+	}
 
+	public Student(int age) {
+		super();
+		this.age = age;
+	}
+	
+}
 
+运行结果：
+123
+atmoicReference about generic
+```
 
-
-
-
+AtomicReference说明： 
+（1）通过将value设置为volatile类型。这保证了线程修改value的值时，其他线程看到的value值都是最新的value值，即修改之后的volatile的值。 
+（2）通过CAS设置value。这保证了：当某线程通过CAS函数（compareAndSet函数）设置value时，它的操作是原子的，即线程在操作value时不会别中断。
 
 
 
